# mrpt-web

./: .gitignore  CMakeLists.txt  README.md  protocol.json
apps/mrpt-ws-rpc/: CMakeLists.txt  CRPCPubSub.spec.json  CRPCPubSubFace.h  CRPCRawLogFace.h  jsonrpcstub.cmake  main.cpp
apps/rawlog-viewer/: CMakeLists.txt  main.cpp  scan_animation.cpp  scan_animation.h  stubs.h
apps/rpc-app-sample/: CMakeLists.txt  main.cpp
libs/web/: CMakeLists.txt
libs/web/include/: CRPCRawLogFace.h
libs/web/include/mrpt/web/: CAbstractServerConnector.h  CAbstractServerConnnector.h  CModularServer.h  CSchemeArchive.h  CWebSocket.h  CWebSocketAdvanced.h  CWebSocketJsonRpcServer.h  CWebSocketUtility.hpp  CWsRpcServer.h  CWsRpcServerBase.h
libs/web/src/: web.cpp
